added link to slides on GitHub

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <li><a href="http://jebeck.github.io/">My blog-shaped thing</a></li>
         <li><a href="mailto:jana.eliz.beck@gmail.com">E-mail me</a></li>
       </ul>
-      <p>Slides created with <a href="http://imakewebthings.com/deck.js/">deck.js</a> and available <a href="">here</a>.</p>
+      <p>Slides created with <a href="http://imakewebthings.com/deck.js/">deck.js</a> and available <a href="http://jebeck.github.io/SelfTracking101/">here</a>.</p>
     </section>
 
     <!-- deck.navigation snippet -->
